# TianGongDu

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json  package.json
.github/workflows/: f1-clean-build.yml
apps/content-workbench/: package.json
apps/content-workbench/src/: authoring-document.mjs  editor-state.mjs
apps/content-workbench/tests/: authoring-document.test.mjs  editor-state.test.mjs
apps/web-shell/: CMakeLists.txt  indexeddb-storage.js  indexeddb-v1.generated.js  quest-ui-renderer.js  service-worker.js  shell.html  web-abi.generated.d.ts  web-abi.generated.js
apps/web-shell/Source/: AppDelegate.cpp  AppDelegate.hpp  F1GrayboxLayer.cpp  F1GrayboxLayer.hpp  F1QuestUiProjection.hpp  F1RewardClaim.hpp  main.cpp
cmake/: TgdArchitecture.cmake  TgdAxmol.cmake  TgdWarnings.cmake  tgd_build_config.hpp.in
cmake/compat/: axmol-2.11.4-wasm.hpp
content/assets/: jiangnan_rain_alley_assets.json
content/buildings/: jiangnan_rain_alley_buildings.json
content/design/: action-registry.json  f1-vertical-slice.json  indexeddb-v1.json  technical-baseline.json  v1-content-catalog.json  web-abi.json
content/editors/: jiangnan_editor_templates.json
content/enemies/: rain_alley_enemies.json
content/interactions/: jiangnan_rain_alley_interactions.json
content/large_areas/: jiangnan_large_areas.json
content/localization/: zh-CN.json
content/npcs/: rain_alley_m1_npcs.json  rain_alley_npcs.json
content/quests/: jiangnan_rain_alley_quests.json
content/regions/: jiangnan_rain_alley.json
content/schemas/: action-registry.schema.json  f1-vertical-slice.schema.json  indexeddb-v1.schema.json  technical-baseline.schema.json  template-registry.schema.json  v1-content-catalog.schema.json  web-abi.schema.json
content/skills/: umbrella_skills.json
content/subregions/: jiangnan_rain_alley_subregions.json
content/systems/: rain_alley_exploration_systems.json
content/templates/: template-registry.json
doc/: 00_前期设计总览.md  01_开发者手册.md  02_项目规划与验收.md  03_项目全局设计规划.md  05_核心数值体系.md  06_交互模式与操作规范.md  08_资料索引与调研计划.md  10_世界观构建方案.md  11_项目设计记忆快照.md  12_测试与验收指南.md  13_江南区域新版大地图设计方案.md  README.md
docs/: 00-项目总纲.md  01-开发者文档.md  02-版本规划与验收.md  03-发布历史.md  04-游戏设计总纲.md  05-世界与叙事圣经.md  06-内容生产规范.md  07-1.0地区与内容蓝图.md  08-UI-UX与可访问性.md  09-术语与索引.md
docs/01-developer/: 10-技术架构与依赖规则.md  11-Runtime与Gameplay组件模型.md  12-内容存档与版本契约.md  13-编辑器与模板生产.md  14-资产管线与性能预算.md  15-服务端热更新与模组边界.md  16-测试CI与发布门禁.md  17-平台构建部署与运维.md  18-安全依赖与许可证.md  19-ADR索引.md
docs/01-developer/adr/: ADR-0001-桌面原生与Godot宿主.md  ADR-0002-混合组件与分层核心.md  ADR-0003-内容包与存档版本契约.md  ADR-0004-离线优先更新与受限模组.md  ADR-0005-Cpp网页首发与Axmol宿主.md  ADR-0006-Cpp分层核心与Wasm平台边界.md  ADR-0007-浏览器内容包与存档同步契约.md  ADR-0008-本地优先与多端云同步.md  ADR-0009-斗战神优先的2.5D斜向全景.md
docs/handovers/2026-07-13-f1/: 00-共享上下文与执行规范.md  01-主开发目标.md  02-美术与技术美术目标.md  03-UI-UX目标.md  04-内容与关卡目标.md  05-QA与集成目标.md  README.md
image_example/: README.md  jiangnan_scenery_reference.prompt.md
legacy/Heavenwrights-Web-V1.1.0/: .gitattributes  .gitignore  CHANGELOG.md  README.md  package.json
legacy/Heavenwrights-Web-V1.1.0/content/: README.md
legacy/Heavenwrights-Web-V1.1.0/doc/: 01_开发者手册.md  04_技术栈与生产管线.md  07_江南雨巷纵切规格.md  09_AI协作内容管线.md  12_测试与验收指南.md
legacy/Heavenwrights-Web-V1.1.0/image_example/: jiangnan_character_reference.prompt.md
legacy/Heavenwrights-Web-V1.1.0/source/: README.md
legacy/Heavenwrights-Web-V1.1.0/tests/: content-schema.test.mjs  web-demo.test.mjs
prototype/web-demo/: README.md  index.html
prototype/web-demo/src/: main-v2.js  styles.css
prototypes/f1-visual-sample/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
prototypes/f1-visual-sample/evidence/: fidelity-ledger.md  playtest-report.json
prototypes/f1-visual-sample/src/: main.ts  style.css
prototypes/f1-visual-sample/tests/: playtest.mjs
server/: README.md
src/content-core/src/: content_definition_provider.cpp  layer_probe.cpp  (+1 more)
tests/: action-contract.test.mjs  architecture.test.mjs  content-m1.test.mjs  content-map13.test.mjs  design-foundation.test.mjs  f1-asset-requirements.test.mjs  f1-playtest-evidence.test.mjs  f1-slice-contract.test.mjs  f1-ui-content-fixtures.test.mjs  indexeddb-contract.test.mjs  quest-ui-renderer.test.mjs  toolchain.test.mjs  web-abi-contract.test.mjs  web-demo.test.mjs
tests/browser/: web-host-lifecycle.mjs
tests/cmake/: expect_architecture_violation.cmake
tests/fixtures/: f1-first-two-beats-asset-requirements.json  f1-first-two-beats-asset-requirements.negative.json  f1-first-two-beats-playtest-evidence.template.json  f1-first-two-beats-ui-events.json  f1-first-two-beats-ui-events.negative.json
tests/fixtures/cmake-architecture-violation/: CMakeLists.txt
tests/native/: CMakeLists.txt  bootstrap_smoke.cpp  combat_resolver.cpp  combat_skill.cpp  command_replay.cpp  encounter_director.cpp  f1_content_contract.cpp  f1_content_replay.cpp  f1_quest_ui_emitter.cpp  game_session_determinism.cpp  playtime_audit.cpp  profile_progress.cpp  profile_storage_coordinator.cpp  quest_condition.cpp  quest_runtime.cpp  quest_ui_projection.cpp  sandbox_gameplay_binding.cpp  sandbox_package.cpp  sandbox_package_contract.cpp  sandbox_session.cpp  save_envelope.cpp  session_input_state.cpp  vertical_slice_session.cpp  web_platform_bridge.cpp
tests/replay/: CMakeLists.txt
tests/replay/include/tgd/test/: f1_content_replay.hpp  f1_golden_replay.hpp
tests/replay/src/: f1_content_replay.cpp  f1_golden_replay.cpp
tests/web/: CMakeLists.txt  replay_probe.cpp
toolchains/: toolchain-lock.json  toolchain-lock.schema.json
tools/: bootstrap-toolchain.ps1  check-architecture.mjs  collect-g1-evidence.mjs  dev-server.mjs  download-range.ps1  ensure-msvc-component.ps1  generate-action-contract.mjs  generate-f1-slice-contract.mjs  generate-indexeddb-contract.mjs  generate-web-abi.mjs  run-toolchain.mjs  validate-design.mjs  validate-f1-asset-requirements.mjs  validate-f1-playtest-evidence.mjs  validate-f1-ui-content-fixtures.mjs  verify-toolchain.mjs
(+89 files in other folders)
